--- a/index.html
+++ b/index.html
@@ -12,27 +12,29 @@
      <div class="game">
         <div class="box">
             <span class="rat"  id="rat0"><img src="/img/mole.svg"></span>
-            <div class="hole"><img src="/img/dirt.svg"></div>
+            <div class="hole"><img src="img/dirt.svg"></div>
         </div>
         <div class="box">
             <span class="rat" id="rat1"><img src="/img/mole.svg"></span>
-            <div class="hole"><img src="/img/dirt.svg"></div>
+            <div class="hole"><img src="img/dirt.svg"></div>
         </div>
         <div class="box">
             <span class="rat" id="rat2"><img src="/img/mole.svg"></span>
-            <div class="hole"><img src="/img/dirt.svg"></div>
+            <div class="hole"><img src="img/dirt.svg"></div>
         </div>
         <div class="box">
             <span class="rat" id="rat3"><img src="/img/mole.svg"></span>
-            <div class="hole"><img src="/img/dirt.svg"></div>
+            <div class="hole"><img src="img/dirt.svg"></div>
         </div>
         <div class="box">
             <span class="rat" id="rat4"><img src="/img/mole.svg"></span>
-            <div class="hole"><img src="/img/dirt.svg"></div>
+            <div class="hole"><img src="/
+                                  img/dirt.svg"></div>
         </div>
         <div class="box">
             <span class="rat" id="rat5"><img src="/img/mole.svg"></span>
-            <div class="hole"><img src="/img/dirt.svg"></div>
+            <div class="hole"><img src="/
+                                  img/dirt.svg"></div>
         </div>
         
         <div class="gameover">
